--- a/public/client/views/legislatorDetail/legislatorDetail.html
+++ b/public/client/views/legislatorDetail/legislatorDetail.html
@@ -12,7 +12,7 @@
 
 
 	<!-- Content -->
-	<div class="container" ng-show="!model.hasError">
+	<div class="container main-content-side-padding" ng-show="!model.hasError">
 		<div class="row">
 			<div class="col-xs-12 col-sm-4">
 				<div class="row">
