--- a/public/client/views/voteDetail/voteDetail.html
+++ b/public/client/views/voteDetail/voteDetail.html
@@ -11,7 +11,7 @@
 	</div>
 
 	<!-- Content -->
-	<div class="container" ng-show="!model.hasError">
+	<div class="container main-content-side-padding" ng-show="!model.hasError">
 		
 		<!-- Vote Metadata -->
 		<h1 class="text-xs-center text-margins">{{model.currentVote.question}}</h1>
