--- a/public/client/views/header/header.html
+++ b/public/client/views/header/header.html
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
     <ul class="nav navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item hidden-sm-up">
         Placeholder <br>
       </li>
       <li class="nav-item">
