--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<h1 class="text-xs-center top-margin">Congressional Votes</h1>
 
 		<!-- Error Message -->
