--- a/public/client/views/overview/overview.html
+++ b/public/client/views/overview/overview.html
@@ -10,17 +10,17 @@
             <div class="row">
                 <div class="col-xs-12 center-block">
                     <div class="introductory-message">
-                        <img class="img-fluid logo center-block" src="./client/images/mypolitics_logo.svg">
-                        <h3 class="text-margins">Political Knowledge At Your Fingertips</h3>
+                        <img class="img-fluid img-rounded logo center-block" src="./client/images/mypolitics_logo.svg">
+                        <h3 class="larger-margins">Political Knowledge At Your Fingertips</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li class="text-margins">
+                            <li class="larger-margins">
                                 <button class="btn btn-default btn-lg" ng-click="model.onLegislatorsClick()">Legislators</button>
                             </li>
-                            <li class="text-margins">
+                            <li class="larger-margins">
                                 <button class="btn btn-default btn-lg" ng-click="model.onVotesClick()">Votes</button>
                             </li>
-                            <li class="text-margins">
+                            <li class="larger-margins">
                                 <button class="btn btn-default btn-lg" ng-click="model.onBillsClick()">Bills</button>
                             </li>
                         </ul>
@@ -45,15 +45,17 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading no-top-margin">Get To Know Your Legislators!</h2>
                     <ul>
-                        <li>Who are the Senators from each State?</li>
+                        <li>Who are the Senators from each state?</li>
                         <li>How many members of each party are in each chamber of Congress?</li>
                         <li>Who are the representatives of each state?</li>
+                        <li>Who represents Puerto Rico in Congress?</li>
+                        <li>Find out the answers and more!</li>
                     </ul>
-                    <p>Get to know each member of Congress!</p>
+                    
                     <button class="btn btn-default btn-lg btn-block top-margin bottom-margin" ng-click="model.onLegislatorsClick()">Legislators</button>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <img class="img-fluid" src="http://ww1.hdnux.com/photos/50/20/67/10554844/3/920x1240.jpg" alt="">
+                    <img class="img-fluid img-rounded" src="http://ww1.hdnux.com/photos/50/20/67/10554844/3/920x1240.jpg" alt="">
                 </div>
             </div>
 
@@ -75,13 +77,16 @@
                         <li>Which bills are getting a vote?</li>
                         <li>What is the result of those votes?</li>
                         <li>How are your representatives voting?</li>
+                        <li>How are the representatives of other states voting?</li>
+                        <li>What do you think of these votes?</li>
+                        <li>Know which laws are being voted on!</li>
                     </ul>
 
-                   	<p>Also get a visual breakdown of votes by party!</p>
+                   	
                     <button class="btn btn-default btn-lg btn-block top-margin bottom-margin" ng-click="model.onVotesClick()">Votes</button>
                 </div>
                 <div class="col-xs-12 col-sm-pull-6 col-sm-6">
-                    <img class="img-fluid" src="./client/images/votes.jpg" alt="">
+                    <img class="img-fluid img-rounded" src="./client/images/votes.jpg" alt="">
                 </div>
             </div>
 
@@ -102,14 +107,17 @@
                     <ul>
                         <li>Which bills are being considered relating to guns? transportation? the economy?</li>
                         <li>What actions have been taken on a bill?</li>
+                        <li>Who is sponsoring the bill? Cosponsoring it?</li>
                         <li>Has the President signed them yet? Or did he veto them?</li>
+                        <li>Do you want this legislation to be passed?</li>
+                        <li>Did you know about this potential law?</li>
+                        <li>Be up to date on what your tax dollars are funding!</li>
                     </ul>
 
-                   	<p>Also get details on who is sponsoring and cosponsoring bills!</p>
                     <button class="btn btn-default btn-lg btn-block top-margin bottom-margin" ng-click="model.onBillsClick()">Bills</button>
                 </div>
                 <div class="col-xs-12 col-sm-6">
-                    <img class="img-fluid" src="http://media.npr.org/assets/img/2015/12/10/essa-edit_custom-235c1ae54b2e7709fe35b6c3632e2ae6e1f4f99b-s900-c85.jpg" alt="">
+                    <img class="img-fluid img-rounded" src="http://media.npr.org/assets/img/2015/12/10/essa-edit_custom-235c1ae54b2e7709fe35b6c3632e2ae6e1f4f99b-s900-c85.jpg" alt="">
                 </div>
             </div>
 
