--- a/public/client/views/billDetail/billDetail.html
+++ b/public/client/views/billDetail/billDetail.html
@@ -17,9 +17,9 @@
 		<h1 class="text-xs-center text-margins" ng-show="!model.currentBill.short_title">{{model.currentBill.official_title}}</h1>
 		<h1 class="text-xs-center text-margins" ng-show="model.currentBill.short_title">{{model.currentBill.short_title}}</h1>
 
-		<h2 class="text-xs-center no-margin">Bill {{model.currentBill.bill_type | uppercase}} {{model.currentBill.number}}</h2>
+		<h2 class="text-xs-center text-margin">Bill {{model.currentBill.bill_type | uppercase}} {{model.currentBill.number}}</h2>
 		<p class="heading-3 text-xs-center text-margins"><strong>Introduced on: </strong>{{model.currentBill.introduced_on | date : "longDate"}}</p>
-		<p class="heading-3 text-xs-center no-margin">Introduced in the <span ng-show="model.currentBill.chamber === 'house'">House of Representatives</span> <span ng-show="model.currentBill.chamber === 'senate'">Senate</span> 
+		<p class="heading-3 text-xs-center text-margins">Introduced in the <span ng-show="model.currentBill.chamber === 'house'">House of Representatives</span> <span ng-show="model.currentBill.chamber === 'senate'">Senate</span> 
 		</p>
 		
 		<!-- Sponsor -->
@@ -27,12 +27,12 @@
 		<div class="row">
 			<div class="col-xs-12 card" ng-click="model.onLegislatorClick(model.currentBill.sponsor.bioguide_id)">
 				<div class="row">
-					<div class="col-xs-6 col-sm-4">
+					<div class="col-xs-6 col-sm-4 top-padding bottom-padding">
 						<img class="img-fluid" ng-src="https://theunitedstates.io/images/congress/225x275/{{model.currentBill.sponsor.bioguide_id}}.jpg">
 					</div>
-					<div class="col-xs-6 col-sm-8">
-						<p>{{model.currentBill.sponsor.title}}. {{model.currentBill.sponsor.first_name}} <span ng-show="model.currentBill.sponsor.middle_name">{{model.currentBill.sponsor.middle_name}}</span> {{model.currentBill.sponsor.last_name}} ({{model.currentBill.sponsor.party}})</p>
-						<p>of {{model.currentBill.sponsor.state_name}}</p>
+					<div class="col-xs-6 col-sm-8 top-padding bottom-padding">
+						<h3>{{model.currentBill.sponsor.title}}. {{model.currentBill.sponsor.first_name}} <span ng-show="model.currentBill.sponsor.middle_name">{{model.currentBill.sponsor.middle_name}}</span> {{model.currentBill.sponsor.last_name}} ({{model.currentBill.sponsor.party}})</h3>
+						<h4>of {{model.currentBill.sponsor.state_name}}</h4>
 					</div>
 				</div>
 			</div>
@@ -40,8 +40,8 @@
 
 		<!-- Cosponsors -->
 		<div class="row">
-			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#cosponsors" aria-expanded="false" aria-controls="cosponsors" ng-show="model.currentBill.cosponsors.length > 0">
-		  {{model.currentBill.cosponsors.length}} Cosponsors <span class="caret"></span>
+			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#cosponsors" aria-expanded="false" aria-controls="cosponsors" ng-show="model.currentBill.cosponsors.length > 0" ng-click="model.clickCosponsorsButton()">
+		  		{{model.currentBill.cosponsors.length}} Cosponsors <i class="fa fa-caret-down fa-2x pull-right" ng-show="!model.cosponsorsShown" aria-hidden="true"></i> <i class="fa fa-caret-up fa-2x pull-right" ng-show="model.cosponsorsShown" aria-hidden="true"></i>
 			</button>
 		</div>
 
@@ -61,28 +61,28 @@
 		
 		<!-- Long and Short Summaries for Bills in Collapsable Divs -->
 		<div class="row">
-			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary_short" aria-expanded="false" aria-controls="summary_short" ng-show="model.currentBill.summary_short">
-		  	Short Summary <span class="caret"></span>
+			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary_short" aria-expanded="false" aria-controls="summary_short" ng-show="model.currentBill.summary_short" ng-click="model.clickSummaryShortButton()">
+		  	Short Summary <i class="fa fa-caret-down fa-2x pull-right" ng-show="!model.summaryShortShown" aria-hidden="true"></i> <i class="fa fa-caret-up fa-2x pull-right" ng-show="model.summaryShortShown" aria-hidden="true"></i>
 			</button>
 		</div>
 
 		<div class="row">
-			<div class="collapse" id="summary_short">
-				<div class="well top-padding" ng-show="model.currentBill.summary_short">
+			<div class="collapse col-xs-12 no-padding" id="summary_short">
+				<div class="well top-padding left-padding right-padding bottom-padding" ng-show="model.currentBill.summary_short">
 					<p>{{model.currentBill.summary_short}}</p>	
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
-			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary" aria-expanded="false" aria-controls="summary" ng-show="model.currentBill.summary">
-		  	Full Summary
+			<button class="btn-lg btn-primary btn-block top-margin" type="button" data-toggle="collapse" data-target="#summary" aria-expanded="false" aria-controls="summary" ng-show="model.currentBill.summary" ng-click="model.clickSummaryButton()">
+		  	Full Summary <i class="fa fa-caret-down fa-2x pull-right" ng-show="!model.summaryShown" aria-hidden="true"></i> <i class="fa fa-caret-up fa-2x pull-right" ng-show="model.summaryShown" aria-hidden="true"></i>
 			</button>
 		</div>
 
 		<div class="row">
-			<div class="collapse" id="summary">
-				<div class="well top-padding" ng-show="model.currentBill.summary">
+			<div class="collapse col-xs-12 no-padding" id="summary">
+				<div class="well top-padding left-padding right-padding bottom-padding" ng-show="model.currentBill.summary">
 					<p>{{model.currentBill.summary}}</p>	
 				</div>
 			</div>
@@ -91,7 +91,7 @@
 		<!-- Links For More Information On Bills  -->
 		<div class="row">
 			<div class="top-padding" ng-show="model.urls.length > 0">
-				<h2>URLs:</h2>
+				<h2 class="underline">URLs</h2>
 				<p>
 					<span ng-repeat="property in model.urls"><a ng-href="{{model.currentBill.urls[property]}}" target="_blank">{{property}}</a>&nbsp; &nbsp; &nbsp; &nbsp;</span>			
 				</p>
@@ -100,7 +100,7 @@
 
 		<!-- Table View of Actions taken on bill -->
 		<div class="row">
-			<h2>Actions Taken:</h2>
+			<h2 class="underline">Actions Taken</h2>
 			<table class="table table-striped">
 				<tr>
 					<th>Action</th>
