--- a/public/client/views/filters/filterDialog.html
+++ b/public/client/views/filters/filterDialog.html
@@ -3,7 +3,6 @@
 <head>
 </head>
 <body>
-	
 	<md-dialog aria-label="Filter Dialog" ng-cloak>
 	    <md-toolbar>
 	      <div class="md-toolbar-tools">
@@ -17,7 +16,7 @@
 
 		<md-dialog-content>	
 
-			<div ng-repeat="filterGroup in model.filterGroups">
+			<div class="filter-dialog-header" ng-repeat="filterGroup in model.filterGroups">
 				<div class="list-group-header list-group-item" data-toggle="collapse" data-target="#{{filterGroup.id}}" aria-expanded="false" aria-controls="" ng-click="model.onFilterGroupClick(filterGroup)">
 					<div class="panel-body">
 						<span ng-show="!filterGroup.expanded"><i class="fa fa-plus" aria-hidden="true"></i>
