--- a/public/client/views/header/header.html
+++ b/public/client/views/header/header.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
-  <a class="navbar-brand" href="#/home">My Politics</a>
-  <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#/home">
+    <img class="img-fluid navbar-logo" src="./client/images/mypolitics_logo.svg">
+  </a>
+  <button class="navbar-toggler hidden-lg-up pull-right hamburger" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
     &#9776;
   </button>
-  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+  <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
     <ul class="nav navbar-nav">
-      <li class="nav-item hidden-sm-up">
-        Placeholder <br>
+      <li class="nav-item hidden-lg-up" style="height:50px">
+        
       </li>
       <li class="nav-item">
         <a class="nav-link" ng-class="{active: model.$location.path() === '/legislators'}" href="#/legislators" data-toggle="collapse" data-target="#exCollapsingNavbar2">Legislators</span></a>
