Refactored buttons on Legislators page
-Refactored buttons code

--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -57,7 +57,7 @@
 		<!-- Load More Buttons -->
 		<div class="row">
 			<div class="col-xs-12 hidden-sm-up top-margin bottom-margin" ng-show="model.bills.length < model.totalBillCount">
-				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
+				<button class="btn btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
 			</div>
 
 			<div class="col-sm-4 offset-sm-4 hidden-xs-down top-margin bottom-margin" ng-show="model.bills.length < model.totalBillCount">
